# valere

./: README.md  valere.cabal
app/client/: Main.hs
src/: Valere.hs
src/Valere/: Snapshot.hs  Utils.hs
