cabal-version:      3.0
name:               valere
version:            0.1.0
homepage:           https://github.com/ggdnsco/valere
bug-reports:        https://github.com/ggdnsco/valere/issues
author:             Maxine DeAndrade
maintainer:         Maxine DeAndrade
license:            AGPL-3.0-only
build-type:         Simple
extra-source-files: README.md
extra-doc-files:
  CHANGELOG.md
  README.md

flag prod
  description:  Compile with extra optimizations for production use
  default:      False
  manual:       True

common common-extensions
  default-language: GHC2021

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -Wno-unticked-promoted-constructors -Werror=unused-imports
    -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16
    -Wunused-packages

  if flag(prod)
    ghc-options:
      -flate-specialise -funbox-strict-fields
      -finline-generics-aggressively -fexpose-all-unfoldings

common common-rts-options
  ghc-options: -rtsopts -threaded "-with-rtsopts=-N -T"

library
  import: common-extensions
  import: common-ghc-options
  hs-source-dirs: src
  exposed-modules:
    Valere
  build-depends:
    base

executable valere-server
  import: common-extensions
  import: common-ghc-options
  import: common-rts-options
  main-is: Main.hs 
  hs-source-dirs: app/server
  build-depends:
    base

executable valere-client
  import:         common-extensions
  import:         common-ghc-options
  import:         common-rts-options
  main-is:        Main.hs
  hs-source-dirs: app/client
  build-depends:
    base 
  